// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup composition with Radio should render correctly 1`] = `
.c1 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c5 {
  display: inline-block;
  position: relative;
  margin-bottom: 1px;
  line-height: 1;
}

.c8 {
  display: block;
  position: relative;
  width: 16px;
  height: 16px;
  padding: 0;
  border: 1px solid;
  border-radius: 50%;
  border-color: #97a4ba;
  background-color: #ffffff;
  color: #283040;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c8::after {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  opacity: 0;
  background-color: #328ef5;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c6 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.c6:checked + .c7 {
  border-color: #328ef5;
}

.c6:checked + .c7::after {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  cursor: pointer;
}

.c3:hover .c7 {
  border-color: #328ef5;
}

.c4 + .c2 {
  margin-left: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<div
  class="c0"
  direction="horizontal"
>
  <div
    class="c1"
  >
    <label
      class="c2 c3 c4"
      direction="horizontal"
    >
      <span
        class="c5"
      >
        <input
          class="c6"
          type="radio"
        />
        <span
          class="c7 c8"
        />
      </span>
      <div
        class="c9"
      >
        Radio 1
      </div>
    </label>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2 c3 c4"
      direction="horizontal"
    >
      <span
        class="c5"
      >
        <input
          class="c6"
          type="radio"
        />
        <span
          class="c7 c8"
        />
      </span>
      <div
        class="c9"
      >
        Radio 2
      </div>
    </label>
  </div>
  <div
    class="c1"
  >
    <label
      class="c2 c3 c4"
      direction="horizontal"
    >
      <span
        class="c5"
      >
        <input
          class="c6"
          type="radio"
        />
        <span
          class="c7 c8"
        />
      </span>
      <div
        class="c9"
      >
        Radio 3
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioGroup should render vertical radio group 1`] = `
.c8 {
  box-sizing: border-box;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c4 {
  display: inline-block;
  position: relative;
  margin-bottom: 1px;
  line-height: 1;
}

.c7 {
  display: block;
  position: relative;
  width: 16px;
  height: 16px;
  padding: 0;
  border: 1px solid;
  border-radius: 50%;
  border-color: #97a4ba;
  background-color: #ffffff;
  color: #283040;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c7::after {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  opacity: 0;
  background-color: #328ef5;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c5 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.c5:checked + .c6 {
  border-color: #328ef5;
}

.c5:checked + .c6::after {
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  cursor: pointer;
}

.c2:hover .c6 {
  border-color: #328ef5;
}

.c3 + .c1 {
  margin-top: 0.5rem;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="c0"
  direction="vertical"
>
  <label
    class="c1 c2 c3"
    direction="vertical"
  >
    <span
      class="c4"
    >
      <input
        class="c5"
        type="radio"
      />
      <span
        class="c6 c7"
      />
    </span>
    <div
      class="c8"
    >
      radio 1
    </div>
  </label>
  <label
    class="c1 c2 c3"
    direction="vertical"
  >
    <span
      class="c4"
    >
      <input
        class="c5"
        type="radio"
      />
      <span
        class="c6 c7"
      />
    </span>
    <div
      class="c8"
    >
      radio 2
    </div>
  </label>
  <label
    class="c1 c2 c3"
    direction="vertical"
  >
    <span
      class="c4"
    >
      <input
        class="c5"
        type="radio"
      />
      <span
        class="c6 c7"
      />
    </span>
    <div
      class="c8"
    >
      radio 3
    </div>
  </label>
</div>
`;
